--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "discord-bot-express": "^1.0.1",
     "discord.js": "^11.5.1"
   }
 }
